# inference-arch-fundamentals

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_smoke.py
topics/t01_number_representation/: README.md  load_weights.py  metrics.py  plot.py  probe.py  quantise.py  test_t01.py
topics/t02_cpu_pipeline/: Makefile  README.md  bench.c  plot.py  test_t02.py
topics/t02_cpu_pipeline/results/: pipeline.csv
topics/t03_memory_hierarchy/: Makefile  README.md  bench.c  gpu_crossover.py  plot.py  test_t03.py
topics/t03_memory_hierarchy/results/: crossover_gpu.csv  memory.csv
